# koan

./: .flake8  CHANGELOG.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: pr-checks.yml  publish-to-pypi.yml
commonprompt-koan/: main.py
commonprompt_koan/: main.py
tests/: test_main.py
