[project]
name = "commonprompt-koan"
version = "0.1.0"
description = "a simple prompt package manager"
authors = [
    {name = "Lawrence Borst",email = "laurens.s.borst@gmail.com"}
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
