[project]
name = "commonprompt-koan"
version = "0.1.0"
description = "a simple prompt package manager"
authors = [
    {name = "Lawrence Borst",email = "laurens.s.borst@gmail.com"}
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.3.3,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project.scripts]
koan = "commonprompt_koan.main:koan"


[tool.poetry]
packages = [
    {include = "commonprompt_koan"}
]


[tool.black]
line-length = 88
target-version = ["py313"]


[tool.isort]
profile="black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D105"]